# r-helper

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  razer-gui.rc
librazer/: Cargo.toml
librazer/src/: capabilities.rs  command.rs  descriptor.rs  device.rs  enumerate.rs  feature.rs  lib.rs  packet.rs  profile.rs  types.rs
librazer/src/chroma/: device.rs  effects.rs  mod.rs  packet.rs  transport.rs
librazer/src/cooling_pad/: device.rs  fan.rs  lighting.rs  mod.rs
librazer/src/headset/: device.rs  mod.rs  packet.rs  pids.rs  protocol.rs  transport.rs
scripts/: cargo.ps1  copy-release.ps1  package-release.ps1
src/: bluetooth.rs  config.rs  cooling_pad_apply.rs  cooling_pad_auto.rs  cooling_pad_enforce.rs  cooling_pad_handle.rs  device_handle.rs  device_poll.rs  device_sync.rs  hid_enum_poll.rs  laptop_fan_cap.rs  main.rs  messaging.rs  session_lock.rs  startup.rs  thermal_poll.rs  tray.rs  ui_wake.rs  utils.rs  worker.rs
src/app/: profiles.rs
src/device/: mod.rs
src/power/: mod.rs
src/system/: mod.rs  specs.rs  thermal.rs
src/ui/: battery.rs  brightness_slider.rs  cooling_pad_fan.rs  cooling_pad_lighting.rs  fan.rs  footer.rs  header.rs  info.rs  lighting.rs  mod.rs  profiles.rs  temp.rs
