[package]
name = "r-helper"
version = "0.4.3"
edition = "2021"
description = "R-Helper - Razer Blade control interface"
authors = ["Fatalution"]

[[bin]]
name = "rhelper"
path = "src/main.rs"

[dependencies]
eframe = "0.32.2"
anyhow = "1.0.89"
librazer = { path = "./librazer" }
image = "0.25.8"
strum = { version = "0.26.1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", features = [
    "Win32_System_Power",
    "Win32_UI_Shell"
] }

[build-dependencies]
embed-resource = "3.0.5"

[workspace]
resolver = "2"
members = [
    ".",          # r-helper (GUI)
    "librazer",   # shared lib
]
default-members = [
    ".",          # build only the GUI by default (root crate)
]
