[package]
name = "r-helper"
version = "0.4.9"
edition = "2021"
description = "R-Helper - Razer Blade control interface"
authors = ["Fatalution"]

[[bin]]
name = "rhelper"
path = "src/main.rs"

[dependencies]
eframe = "0.33.3"
anyhow = "1.0.89"
librazer = { path = "./librazer" }
image = "0.25.8"
strum = { version = "0.28.0", features = ["derive"] }
tray-icon = "0.21.1"
raw-window-handle = "0.6.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
windows = { version = "0.62.0", features = [
    "Win32_System_Power",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[build-dependencies]
embed-resource = "3.0.9"

[workspace]
resolver = "2"
members = [
    ".",          # r-helper (GUI)
    "librazer",   # shared lib
]
default-members = [
    ".",          # build only the GUI by default (root crate)
]
