[package]
name = "r-helper"
version = "0.7.3"
edition = "2024"
description = "R-Helper - Razer Blade control interface"
authors = ["Fatalution"]

[[bin]]
name = "rhelper"
path = "src/main.rs"

[dependencies]
eframe = "0.33.3"
anyhow = "1.0.89"
librazer = { path = "./librazer" }
image = "0.25.8"
strum = { version = "0.28.0", features = ["derive"] }
tray-icon = "0.21.1"
raw-window-handle = "0.6.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
wmi = "0.18.4"
nvml-wrapper = "0.12.1"
windows = { version = "0.62.0", features = [
    "Win32_Foundation",
    "Win32_Storage_EnhancedStorage",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
embed-resource = "3.0.9"

[workspace]
resolver = "3"
members = [
    ".",          # r-helper (GUI)
    "librazer",   # shared lib
]
default-members = [
    ".",          # build only the GUI by default (root crate)
]
